Improved efficiency of reading output file